--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "moment": "^2.29.4",
     "next": "^13.2.4",
     "nextjs-cors": "^2.1.2",
     "react": "18.2.0",
